Moved blocks into a config
this allows the user to set it up how they want just like with mobs.